Create a two ymls

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -5,7 +5,8 @@
 #                                                     #
 #######################################################
 
-no-perm: "&CNo tienes permiso para ejecutar este comando."
-vipjoin:
-  - ""
-  - ""
+messages:
+  nopermission: "&CNo tienes permiso para ejecutar este comando."
+  vipjoin:
+    - ""
+    - ""
