--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ subprojects {
         maven { url 'https://libraries.minecraft.net/' }
         maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'}
         maven { url 'https://repo.unnamed.team/repository/unnamed-public/'}
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots'}
     }
 
 }
