--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: ReignLobby
 main: team.reign.lobby.ReignLobby
 version: 0.0.1
 author: ReignTeam
+
+commands:
+  lobby:
+    description: Command for administrators.
